--- a/css/gameboard.css
+++ b/css/gameboard.css
@@ -36,7 +36,9 @@ html, body {
   -ms-user-select: none;
   user-select: none;
 }
-
+.container {
+  max-height: 200px;
+}
 #container {
   width: 100%;
   height: 100%;
