--- a/css/gameboard.css
+++ b/css/gameboard.css
@@ -4,7 +4,7 @@ html, body {
 }
 
 .page-footer {
-  position: fixed;
+  position: relative;
   width: 100%;
   bottom: 0;
 }
@@ -36,9 +36,19 @@ html, body {
   -ms-user-select: none;
   user-select: none;
 }
-.container {
-  max-height: 200px;
+
+#infoContainer {
+  background-color: #212a34;
+  color: white;
+  padding-top: 1px;
+  padding-bottom: 1px;
 }
+
+#gameInfo {
+
+  font-size: 20px;
+}
+
 #container {
   width: 100%;
   height: 100%;
