--- a/css/gameboard.css
+++ b/css/gameboard.css
@@ -1,11 +1,11 @@
 html, body {
-  height: 110vh;
   font-family: 'Roboto', sans-serif;
 }
 
 .page-footer {
   position: relative;
   width: 100%;
+  height: 15%;
   bottom: 0;
 }
 
@@ -22,6 +22,10 @@ html, body {
   font-size: 10px;
   text-align: center;
   color: yellow;
+}
+
+.modal-content {
+  max-height: 500px;
 }
 
 .modal-button-container {
@@ -45,6 +49,15 @@ html, body {
 
 .horizontal {
   background-color: white;
+}
+
+.loaders {
+  display: inline-block;
+  color: white;
+}
+
+#loadersContainer {
+  width: 110%;
 }
 
 #infoContainer {
