--- a/css/home.css
+++ b/css/home.css
@@ -20,6 +20,10 @@ body {
   font-family: 'Roboto', sans-serif;
 }
 
+.playerSelect{
+  font-family: 'Orbitron', sans-serif;
+}
+
 video #bgvid {
     position: fixed;
     top: 50%;
@@ -28,7 +32,7 @@ video #bgvid {
     min-height: 100%;
     width: auto;
     height: auto;
-    z-index: -100;
+    z-index: -1;
     -ms-transform: translateX(-50%) translateY(-50%);
     -moz-transform: translateX(-50%) translateY(-50%);
     -webkit-transform: translateX(-50%) translateY(-50%);
@@ -38,6 +42,7 @@ video #bgvid {
 }
 
 #container {
+  z-index: -2;
   width: 100%;
   height: 100%;
   background-color: #212a34;
