--- a/css/home.css
+++ b/css/home.css
@@ -1,5 +1,5 @@
 a {
-  width:100%;
+  width: 100%;
 }
 
 body {
@@ -24,9 +24,14 @@ body {
   font-family: 'Orbitron', sans-serif;
 }
 
-#container {
-  z-index: -2;
+#outer-container {
+  display: inline-flex;
   width: 100%;
   height: 100%;
   background-color: #212a34;
+}
+
+#inner-container {
+  width: 100%;
+  margin: auto;
 }
