--- a/css/help.css
+++ b/css/help.css
@@ -1,7 +1,9 @@
 body {
-  height: 100vh;
+  height: 100%;
 }
-
+.page-footer {
+  height: 100%;
+}
 #outer-container {
   width: 100%;
   height: 100%;
